@@ -369,9 +369,11 @@ namespace Ipopt
 
     /** Cpu time counter at the beginning of the optimization.  This
      *  is useful to see how much CPU time has been spent in this
-     *  optimization run. */
+     *  optimization run.
+     *  Can only be called after beginning of optimization. */
     Number cpu_time_start() const
     {
+      assert(cpu_time_start_ >= 0);
       return cpu_time_start_;
     }
 
@@ -482,6 +484,12 @@ namespace Ipopt
     TimingStatistics& TimingStats()
     {
       return timing_statistics_;
+    }
+
+    /** Resetting CPU Start Time */
+    void ResetCpuStartTime()
+    {
+      cpu_time_start_ = CpuTime();
     }
 
     /** Check if additional data has been set */
@@ -637,7 +645,7 @@ namespace Ipopt
      *  statistics */
     TimingStatistics timing_statistics_;
 
-    /** CPU time counter at initialization. */
+    /** CPU time counter at begin of optimization. */
     Number cpu_time_start_;
 
     /** Object for the data specific for the Chen-Goldfarb penalty
