@@ -4,6 +4,9 @@ history management of subversion.
 
 2017-xx-yy releases/3.12.9
         - fixed memory leak in MA86 interface (by mhahn) [r2700,#283]
+        - fixed handling of time limit when reoptimizing: CPU time spend
+          was accumulated when reoptimizing, while it should have been
+          reset for each solve (by paul-scott) [r2702]
 
 2017-06-12 releases/3.12.8
         - add define for FORTRAN_INTEGER_TYPE to config_ipopt_default.h
